WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233955
[GTK] Video alpha channel doesn't work
https://bugs.webkit.org/show_bug.cgi?id=233955
Summary
[GTK] Video alpha channel doesn't work
zipdox
Reported
2021-12-07 15:30:16 PST
I originally reported this to Epiphany but I was directed here.
https://gitlab.gnome.org/GNOME/epiphany/-/issues/1654
The WebM container supports alpha channel video with the VP8 and VP9 codecs, however in Epiphany this doesn't work. Transparent video is shown with a black background instead.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Bentzen
Comment 1
2024-03-28 18:21:23 PDT
The issue is with the dma-buf sink. Both the GL and software-compositing sinks render with the alpha channel blending correctly (done in
https://commits.webkit.org/238313@main
). To not use the dma-buf sink, set WEBKIT_GST_DMABUF_SINK_DISABLED=1. Fix for dma-buf incoming...
Carlos Bentzen
Comment 2
2024-03-28 18:34:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26598
EWS
Comment 3
2024-04-02 09:14:04 PDT
Committed
276936@main
(aff02c3a8c4f): <
https://commits.webkit.org/276936@main
> Reviewed commits have been landed. Closing PR #26598 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-04-02 09:15:20 PDT
<
rdar://problem/125786839
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug